<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="3:2"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:background="#80000000"
            android:gravity="start|center_vertical"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/textview"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/place_24dp"
            tools:text="@string/song_name" />

        <TextView
            android:id="@+id/tv_song_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ellipsize="end"
            android:maxLines="0"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_song_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="start|center"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/square2"
            android:importantForAccessibility="no"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/textview2"
            android:textStyle="italic|bold"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="65dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_song_name"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/box"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="start|center"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/square" />

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintStart_toStartOf="@id/box"
            android:layout_marginStart="10dp"
            android:layout_gravity="start|center"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/staricon" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_gravity="start|center"
            app:layout_constraintStart_toEndOf="@id/starIcon"
            android:importantForAccessibility="no"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/ratingdefault"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>
</androidx.cardview.widget.CardView>
