<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.temucafe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_cafe" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cafe"
        android:name="com.example.temucafe.ui.cafe.CafeFragment"
        android:label="@string/title_cafe"
        tools:layout="@layout/fragment_cafe" >
        <action
            android:id="@+id/action_navigation_dashboard_to_mainActivity"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_navigation_dashboard_to_songDetailActivity"
            app:destination="@id/songDetailActivity" />
        <action
            android:id="@+id/action_navigation_dashboard_to_mainActivity2"
            app:destination="@id/mainActivity" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.temucafe.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.temucafe.MainActivity"
        android:label="fragment_dashboard"
        tools:layout="@layout/fragment_cafe" />
    <activity
        android:id="@+id/songDetailActivity"
        android:name="com.example.temucafe.CafeDetailActivity"
        android:label="SongDetailActivity" />
</navigation>
