<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:outlineAmbientShadowColor="@color/Beige">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/favoriteImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/locationButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.55"
            app:layout_constraintHeight_percent="1.0"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/locationButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/favorite_button_location"
            android:textAllCaps="false"
            android:textColor="@color/Navy"
            android:textStyle="bold"
            android:textSize="12sp"
            android:background="@drawable/transparent_bg_bordered_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favoriteImg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.35"
            app:layout_constraintHeight_percent="0.25"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/cafeButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/transparent_bg_bordered_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/favorite_button_cafe"
            android:textAllCaps="false"
            android:textColor="@color/Navy"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toEndOf="@+id/favoriteImg"
            app:layout_constraintTop_toBottomOf="@+id/locationButton"
            app:layout_constraintWidth_percent="0.35"
            card_view:layout_constraintBottom_toTopOf="@+id/deleteButton" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/transparent_bg_bordered_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/favorite_button_delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toEndOf="@+id/favoriteImg"
            app:layout_constraintWidth_percent="0.35"
            card_view:layout_constraintBottom_toBottomOf="parent" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/transparencyShape"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/transparencybg"
            android:scaleType="centerCrop"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.55"
            app:shapeAppearanceOverlay="@style/RoundedSquare"
            card_view:layout_constraintBottom_toBottomOf="@+id/favoriteImg"
            card_view:layout_constraintEnd_toEndOf="@+id/favoriteImg"
            card_view:layout_constraintStart_toStartOf="@+id/favoriteImg" />

        <ImageView
            android:id="@+id/locationicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/favoriteImg"
            app:layout_constraintEnd_toEndOf="@+id/transparencyShape"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="@+id/transparencyShape"
            app:layout_constraintTop_toTopOf="@+id/transparencyShape"
            app:layout_constraintVertical_bias="0.545"
            app:srcCompat="@drawable/locationicon" />

        <ImageView
            android:id="@+id/starIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/favoriteImg"
            app:layout_constraintEnd_toEndOf="@+id/transparencyShape"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="@+id/transparencyShape"
            app:layout_constraintTop_toTopOf="@+id/transparencyShape"
            app:layout_constraintVertical_bias="0.59"
            app:srcCompat="@drawable/staricon" />

        <TextView
            android:id="@+id/cafeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_cafe"
            android:textColor="@color/Navy"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/favoriteImg"
            card_view:layout_constraintEnd_toStartOf="@+id/starIcon"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/locationicon"
            card_view:layout_constraintTop_toTopOf="@+id/transparencyShape"
            card_view:layout_constraintVertical_bias="0.615" />

        <TextView
            android:id="@+id/ratingCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_star_0"
            android:textColor="@color/Navy"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="3dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/favoriteImg"
            card_view:layout_constraintEnd_toEndOf="@+id/transparencyShape"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/starIcon"
            card_view:layout_constraintTop_toTopOf="@+id/transparencyShape"
            card_view:layout_constraintVertical_bias="0.653" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
